@@ -38,7 +38,7 @@ public class TestProtocolDatagram extends TestProtocolSpecific {
                                                new Random().nextInt(10000)+10000));
     server.start();
     client = new DatagramTransceiver(new InetSocketAddress("localhost", server.getPort()));
-    proxy = (Simple)SpecificRequestor.getClient(Simple.class, client);
+    proxy = SpecificRequestor.getClient(Simple.class, client);
   }
 
 }
